CS232 - Programming Languages/Lab1_2/task3/Terminal Saved Output
Last login: Thu Jan 28 12:11:54 on ttys000
SIE-1222-19:~ robert.florence883$ ls
Applications	Documents	Library		Music		Public
Desktop		Downloads	Movies		Pictures
SIE-1222-19:~ robert.florence883$ cd Desktop/
SIE-1222-19:Desktop robert.florence883$ cd CS232/
SIE-1222-19:CS232 robert.florence883$ ls
Lab1
SIE-1222-19:CS232 robert.florence883$ cd Lab1/
SIE-1222-19:Lab1 robert.florence883$ LS
src	task1	task2
SIE-1222-19:Lab1 robert.florence883$ ls
src	task1	task2
SIE-1222-19:Lab1 robert.florence883$ cd task2
SIE-1222-19:task2 robert.florence883$ ls
types.c
SIE-1222-19:task2 robert.florence883$ gcc types.c -o types
types.c:12:2: error: non-void function 'main' should return a value
      [-Wreturn-type]
        return ;
        ^
1 error generated.
SIE-1222-19:task2 robert.florence883$ gcc types.c -o types
types.c:15:39: error: use of undeclared identifier 'faculty'; did you mean
      'nfaculty'?
    printf("CSUCI has %d faculty.\n", faculty);
                                      ^~~~~~~
                                      nfaculty
types.c:6:9: note: 'nfaculty' declared here
    int nfaculty = 0;
        ^
types.c:18:57: warning: format specifies type 'int' but the argument has type
      'double' [-Wformat]
    printf("CSUCI's student to faculty ratio is %d.\n", ratio);
                                                ~~      ^~~~~
                                                %f
1 warning and 1 error generated.
SIE-1222-19:task2 robert.florence883$ gcc types.c -o types
SIE-1222-19:task2 robert.florence883$ ./types
How many students does CSUCI have ?:1200
CSUCI has 1200 students.
How many faculty does CSUCI have ?:25
CSUCI has 25 faculty.
CSUCI's student to faculty ratio is 48.000000.
SIE-1222-19:task2 robert.florence883$ ./types
How many students does CSUCI have ?:1200
CSUCI has 1200 students.
How many faculty does CSUCI have ?:25
CSUCI has 25 faculty.
CSUCI's student to faculty ratio is 48.000000.
SIE-1222-19:task2 robert.florence883$ gcc types.c -o types
SIE-1222-19:task2 robert.florence883$ ./types
How many students does CSUCI have ?:1200
CSUCI has 1200 students.
How many faculty does CSUCI have ?:25
CSUCI has 25 faculty.
CSUCI's student to faculty ratio is 48.0.
SIE-1222-19:task2 robert.florence883$ cd..
-bash: cd..: command not found
SIE-1222-19:task2 robert.florence883$ cd ..
SIE-1222-19:Lab1 robert.florence883$ ls
src	task1	task2	task3
SIE-1222-19:Lab1 robert.florence883$ cd task3
SIE-1222-19:task3 robert.florence883$ gcc if-then-else.c
SIE-1222-19:task3 robert.florence883$ gcc if-then-else.c -o ifthenelse
SIE-1222-19:task3 robert.florence883$ ls
a.out		if-then-else.c	ifthenelse
SIE-1222-19:task3 robert.florence883$ ls
if-then-else.c	ifthenelse
SIE-1222-19:task3 robert.florence883$ ./ifthenelse 
Low on gas!
SIE-1222-19:task3 robert.florence883$ gcc if-then-else.c -o ifthenelse
if-then-else.c:12:17: warning: data argument not used by format string
      [-Wformat-extra-args]
    scanf("&d", &gaslevel);
          ~~~~  ^
1 warning generated.
SIE-1222-19:task3 robert.florence883$ gcc if-then-else.c -o ifthenelse
SIE-1222-19:task3 robert.florence883$ ./ifthenelse 
Gas level?(0 - 10: 9
Good driver !
SIE-1222-19:task3 robert.florence883$ ./ifthenelse 
Gas level?(0 - 10: 3
Low on gas!
SIE-1222-19:task3 robert.florence883$ 























